--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <h4>Sign In to Continue.</h4>  
                         </div>
                         <div class="text">
-                            <label>Don't have an account?<a style="color: black;" href="#">Create a account</a></label><br>
+                            <label>Don't have an account?<a style="color: black; font-weight: bold;" href="#">Create a account</a></label><br>
                             <label class="label">It takes less then a minute.</label>
                         </div>
                         <form action="" id="login-form">
@@ -46,7 +46,7 @@
                             </div>
                             <div class="sign-up-social">
                                 <img src="google.png" style="width: 15px; height: 15px;" alt="">
-                                <label  class="sign-up-social-text"> Sign up with Google</label>
+                                <a style="color: black;" href="#"><label class="sign-up-social-text"> Sign up with Google</label></a>
                             </div>
                         </form>
                         
